[project]
name = "my_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
load_history_cnt='my_history.cli:cnt'

[tool.pdm]
distribution = true

